feat: Add @tanstack/react-table dependency
The commit adds the "@tanstack/react-table" dependency to the project. This dependency is required for implementing a table component for displaying driver data.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.2",
+    "@tanstack/react-table": "^8.17.3",
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
